# C-Game

./: Building.cpp  Building.h  CMakeLists.txt  GameEngine.cpp  GameEngine.h  GoldMine.cpp  GoldMine.h  GoldStorage.cpp  GoldStorage.h  Housing.cpp  Housing.h  LumberMill.cpp  LumberMill.h  Mines.cpp  Mines.h  Poznamky.txt  StoneMine.cpp  StoneMine.h  StoneStorage.cpp  StoneStorage.h  Storage.cpp  Storage.h  TownHall.cpp  TownHall.h  WoodStorage.cpp  WoodStorage.h  World.cpp  World.h  main.cpp
GameEngine/: BuildBuilding.h  BuildInfo.cpp  BuildInfo.h  Building.cpp  Building.h  GameEngine.cpp  GenerateResource.cpp  PrintBuildingInfo.cpp  PrintFullInfo.cpp
GameEngine/Board/: Svet.cpp  Svet.h
GameEngine/UpgradeBuilding/: UpgradeGoldMine.cpp  UpgradeGoldStorage.cpp  UpgradeGoldStorage.h  UpgradeInfo.cpp  UpgradeInfo.h  UpgradeLumberMill.cpp  UpgradeStoneMine.h  UpgradeStoneStorage.h  UpgradeTownHall.cpp
Mines/: EnumMine.cpp  EnumMine.h  GoldMine.cpp  GoldMine.h  LumberMill.cpp  LumberMill.h  MineType.cpp  MineType.h  Mines.cpp  Mines.h  StoneMine.cpp  StoneMine.h
Storages/: GoldStorage.cpp  GoldStorage.h  StoneStorage.cpp  StoneStorage.h  Storage.cpp  Storage.h  TownHall.cpp  TownHall.h  WoodStorage.cpp  WoodStorage.h
try/: CMakeLists.txt  World.cpp  World.h  main.cpp
try/GameEngine/: BuildBuilding.cpp  GameEngine.cpp  GameEngine.h  GenerateResource.h  PrintBuildingInfo.h  PrintFullInfo.h
try/Mines/: GoldMine.cpp  GoldMine.h  LumberMill.h  Mines.cpp  Mines.h  StoneMine.cpp
try/Storages/: StoneStorage.cpp  WoodStorage.cpp
(+7 files in other folders)
