cmake_minimum_required(VERSION 3.20)
project(ZOOProjekt)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZOOProjekt main.cpp Building.cpp Building.h Mines.cpp Mines.h GoldMine.cpp GoldMine.h Storage.cpp Storage.h StoneMine.cpp StoneMine.h LumberMill.cpp LumberMill.h Housing.cpp Housing.h TownHall.cpp TownHall.h WoodStorage.cpp WoodStorage.h StoneStorage.cpp StoneStorage.h GoldStorage.cpp GoldStorage.h GameEngine.cpp GameEngine.h)
